<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="dashboard"
            type="com.citizen.registration.ui.viewmodel.DashboardViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rl_user_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="@dimen/_15sdp"
            android:clipToPadding="false">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImage"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/app_logo" />

            <LinearLayout
                android:id="@+id/ln_user_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_toEndOf="@+id/profileImage"
                android:layout_toStartOf="@+id/tv_logout"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_user_name"
                    style="@style/RobotoMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:padding="@dimen/_3sdp"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_12sdp"
                    tools:text="Atik Faysal" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_phone"
                    style="@style/RobotoRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/_3sdp"
                    android:paddingEnd="@dimen/_3sdp"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_10sdp"
                    tools:text="01647544954" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_logout"
                style="@style/RobotoMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:gravity="center_vertical"
                android:padding="@dimen/_3sdp"
                android:textColor="@color/red"
                android:textSize="@dimen/_12sdp"
                android:text="@string/logout" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/rl_user_info"
            android:layout_marginTop="@dimen/_20sdp">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardCornerRadius="@dimen/_2sdp"
                android:layout_margin="@dimen/_5sdp"
                app:cardElevation="@dimen/five"
                android:elevation="@dimen/five">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/RobotoMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_vertical"
                        android:padding="@dimen/_3sdp"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_12sdp"
                        android:text="@string/today"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_today"
                        style="@style/RobotoRegular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_vertical"
                        android:padding="@dimen/_3sdp"
                        android:text="@={dashboard.mlToday}"
                        android:textColor="@color/green_A400"
                        android:textSize="@dimen/_14sdp"
                        tools:text="11" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardCornerRadius="@dimen/_2sdp"
                android:layout_margin="@dimen/_5sdp"
                app:cardElevation="@dimen/five"
                android:elevation="@dimen/five">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/RobotoMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_vertical"
                        android:padding="@dimen/_3sdp"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_12sdp"
                        android:text="@string/last_week" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_last_week"
                        style="@style/RobotoRegular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_vertical"
                        android:padding="@dimen/_3sdp"
                        android:text="@={dashboard.mlLastWeek}"
                        android:textColor="@color/info_color"
                        android:textSize="@dimen/_14sdp"
                        tools:text="11" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardCornerRadius="@dimen/_2sdp"
                android:layout_margin="@dimen/_5sdp"
                app:cardElevation="@dimen/five"
                android:elevation="@dimen/five">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/RobotoMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_vertical"
                        android:padding="@dimen/_3sdp"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_12sdp"
                        android:text="@string/total" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_total"
                        style="@style/RobotoRegular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_vertical"
                        android:text="@={dashboard.mlTotal}"
                        android:padding="@dimen/_3sdp"
                        android:textColor="@color/enable_inner"
                        android:textSize="@dimen/_14sdp"
                        tools:text="11" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_30sdp"
            style="@style/RobotoRegular"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/btn_add_new"
            android:padding="@dimen/_10sdp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:background="@drawable/bg_button_square_round_bold"
            android:textSize="@dimen/_15sdp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>